# sapiens-rs

./: .gitignore  .gitmodules  Cargo.toml  Jenkinsfile  readme.md
examples/: more-smoke-mod.rs
examples/more-smoke-mod/: Cargo.toml
sapiens-rs-macros/: Cargo.toml
sapiens-rs-macros/src/: generation.rs  lib.rs  particles.rs
sapiens-rs-macros/tests/: particles_api_test.rs
sapiens-sys/: .gitignore  Cargo.toml  Cargo.toml.bak  Jenkinsfile  New-Bindings.ps1  build.rs
sapiens-sys/resources/: wrapper.h
sapiens-sys/src/: bindings.rs
sapiens-sys/src/native-headers/: wrapper.h
src/: lib.rs
src/sp/: biome.rs  common.rs  math.rs  mod.rs  noise.rs  particles.rs  rand.rs
src/usermod/: mod.rs  particles.rs
tests/: ffi_example_test.rs  particles_api_test.rs
