[package]
name = "sapiens-rs-macros"
version = "0.1.0"
authors = ["David Dubois <dexcelstraun7@gmail.com>"]
edition = "2018"
description = "Procedural macros to expose the functions that a Sapient mod needs to expose"
keywords = ["sapiens", "ffi"]
repository = "https://github.com/DethRaid/sapiens-rs"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["full"] }

[dev-dependencies]
sapiens-sys = { path = "../sapiens-sys", version = "0.2" }