[package]
name = "sapiens-sys"
version = "0.1.0"
authors = ["David Dubois <dexcelstraun7@gmail.com>"]
edition = "2018"
description = "Raw FFI bindings to the Sapiens C modding API"
keywords = ["sapiens", "ffi"]
categories = ["api_bindings", "external-ffi-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.51.0"
