[package]
name = "sapiens-sys"
version = "0.1.0"
authors = ["David Dubois <dexcelstraun7@gmail.com>"]
edition = "2018"
description = "Raw FFI bindings to the Sapiens C modding API"
keywords = ["sapiens", "ffi"]
categories = ["api_bindings", "external-ffi-bindings"]
repository = "https://github.com/DethRaid/sapiens-rs"
lcense = "MIT"

[build-dependencies]
bindgen = "0.51.0"
