[package]
name = "sapiens-sys"
version = "0.2.0"
authors = ["David Dubois <dexcelstraun7@gmail.com>"]
edition = "2018"
description = "Raw FFI bindings to the Sapiens C modding API"
keywords = ["sapiens", "ffi"]
categories = ["api-bindings", "external-ffi-bindings"]
repository = "https://github.com/DethRaid/sapiens-rs"
license = "MPL"
links = "SPCommon"