[package]
name = "more-smoke-mod"
version = "0.1.0"
authors = ["David Dubois <dexcelstraun7@gmail.com>"]
edition = "2018"
description = "Rust implementation of the More Smoke example mod"

[lib]
crate-type = ["cdylib"]

[dependencies]
sapiens-rs = { git = "https://github.com/DethRaid/sapiens-rs.git" }

[features]
default = ["particles"]

biome = []
climate = []
height = []
particles = []
rainfall = []

all = ["biome", "climate", "height", "particles", "rainfall", "default"]
